FACES-1714 Develop Liferay Faces Showcase (added 4-column template and fixed css nowrap issue with inline code styling)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -77,6 +77,7 @@ code {
 .aui span.inline-code {
 	border: 1px solid #cfcfcf;
 	font-family: monospace;
+	white-space:nowrap;
 }
 
 .aui span.inline-warning {
